@@ -1,4 +1,4 @@
-.TH HDPARM 8 "February 2008" "Version 8.4+"
+.TH HDPARM 8 "February 2008" "Version 8.6"
 
 .SH NAME
 hdparm \- get/set SATA/ATA device parameters
